[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Scripts/Area.gd" type="Script" id=1]
[ext_resource path="res://assets/Lightning8.png" type="Texture" id=2]
[ext_resource path="res://src/Scenes/Attacks/LightningStrike.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 63, 250 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 63, 0, 63, 250 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 126, 0, 63, 250 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 189, 0, 63, 250 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 63, 250 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 315, 0, 63, 250 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 378, 0, 63, 250 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 441, 0, 63, 250 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Strike",
"speed": 5.0
} ]

[sub_resource type="Animation" id=10]
resource_name = "Strike"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Lightning8:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.0100001, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 53.4031

[sub_resource type="CapsuleShape2D" id=12]
radius = 35.6871
height = 177.829

[node name="Lightning" type="StaticBody2D"]
position = Vector2( 0.773743, -0.773773 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Lightning8" type="AnimatedSprite" parent="."]
position = Vector2( -1.42456, -101.721 )
frames = SubResource( 9 )
animation = "Strike"
speed_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Strike = SubResource( 10 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0.429276, -7.08302 )
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.858551, 15.4539 )
shape = SubResource( 11 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.840881, -96.7028 )
shape = SubResource( 12 )

[node name="AttackData" type="Node" parent="."]
script = ExtResource( 3 )
animated_sprite = NodePath("../Lightning8")
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_shape_entered" from="Hitbox" to="." method="_on_Hitbox_body_shape_entered"]
